fix: ms-container 默认添加 overflow: auto

--- a/packages/mac-scrollbar/src/MacScrollbar.less
+++ b/packages/mac-scrollbar/src/MacScrollbar.less
@@ -10,6 +10,8 @@
 }
 
 .ms-container {
+  overflow: auto;
+
   > .ms-track-box {
     position: sticky;
     top: 100%;
